--- a/PluginToast/app/src/main/AndroidManifest.xml
+++ b/PluginToast/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.vitaliibonar.plugintoast">
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:icon="@mipmap/ic_launcher"
-                 android:roundIcon="@mipmap/ic_launcher_round"
-                 android:supportsRtl="true"
-                 android:theme="@style/AppTheme"/>
+    <application tools:ignore="AllowBackup,GoogleAppIndexingWarning,MissingApplicationIcon">
+        <service android:name="com.vitaliibonar.plugintoast.PluginToastService">
+            <intent-filter>
+                <action android:name="com.vitaliibonar.plugintoast.PluginToastService" />
+            </intent-filter>
+        </service>
+    </application>
+
 </manifest>
