--- a/PluginManager/app/src/main/AndroidManifest.xml
+++ b/PluginManager/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.scan.ScanPluginsActivity"/>
 
         <service android:name=".core.service.PluginManagerService"/>
     </application>
