--- a/PluginVibe/app/src/main/AndroidManifest.xml
+++ b/PluginVibe/app/src/main/AndroidManifest.xml
@@ -5,10 +5,15 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application tools:ignore="AllowBackup,GoogleAppIndexingWarning,MissingApplicationIcon">
+
+        <meta-data android:name="PLUGIN_COMPONENT_NAME"
+                   android:value="com.vitaliibonar.pluginvibe.PluginVibeService"/>
+
         <service android:name="com.vitaliibonar.pluginvibe.PluginVibeService">
             <intent-filter>
                 <action android:name="com.vitaliibonar.pluginvibe.PluginVibeService"/>
             </intent-filter>
         </service>
+
     </application>
 </manifest>
